k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai-chat-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openai-chat-demo
  template:
    metadata:
      labels:
        app: openai-chat-demo
    spec:
      containers:
        - name: openai-chat-demo
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
